deploy/testctl_http/alert_manager_deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alert-manager
  namespace: hongkliu-run
spec:
  ports:
    - port: 9093
      protocol: TCP
      targetPort: 9093
  selector:
    name: alert-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-manager
  namespace: hongkliu-run
spec:
  replicas: 1
  selector:
    matchLabels:
      name: alert-manager
  template:
    metadata:
      labels:
        name: alert-manager
    spec:
      containers:
        - image: "quay.io/prometheus/alertmanager:v0.16.2"
          #https://hub.docker.com/r/prom/alertmanager/dockerfile
          name: alert-manager
          args:
            - --config.file=/etc/config/alertmanager.yml
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /alertmanager
              name: alert-manager-db
            - name: config-volume
              mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: alert-manager-config
        - emptyDir: {}
          name: alert-manager-db
---
apiVersion: v1
kind: Route
metadata:
  name: alert-manager
  namespace: hongkliu-run
spec:
  port:
    targetPort: 9093
  to:
    kind: Service
    name: alert-manager
