deploy/testctl_http/prometheus_deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: hongkliu-stage
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    name: prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: hongkliu-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      name: prometheus
  template:
    metadata:
      labels:
        name: prometheus
    spec:
      containers:
        - image: "quay.io/prometheus/prometheus:v2.9.1"
          name: prometheus
          args:
            - --config.file=/etc/config/prometheus.yml
          volumeMounts:
            - mountPath: /prometheus
              name: prometheus-db
            - name: config-volume
              mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: prometheus
            items:
              - key: prometheus.yml
                path: prometheus.yml
        - emptyDir: {}
          name: prometheus-db
---
apiVersion: v1
kind: Route
metadata:
  name: prometheus
  namespace: hongkliu-stage
spec:
  port:
    targetPort: 9090
  to:
    kind: Service
    name: prometheus
