deploy/testctl_http/status_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: status
  namespace: hongkliu-run
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: status
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status
  namespace: hongkliu-run
spec:
  replicas: 1
  selector:
    matchLabels:
      name: status
  template:
    metadata:
      labels:
        name: status
    spec:
      serviceAccount: status
      containers:
        - image: quay.io/hongkailiu/test-go:testctl-travis-619.2
          command: ["/testctl"]
          args: ["http", "status", "-v"]
          name: status
          resources:
            requests:
              memory: "64Mi"
              cpu: "125m"
            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Route
metadata:
  name: status
  namespace: hongkliu-run
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: status
