deploy/testctl_http/testctl_deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: hongkliu-run
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: hongkliu-run
spec:
  replicas: 2
  selector:
    matchLabels:
      name: web
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - image: "quay.io/hongkailiu/test-go:testctl-0.0.16"
          command: ["/testctl"]
          args: ["http", "start", "-v"]
          imagePullPolicy: IfNotPresent
          name: web
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: web
  namespace: hongkliu-run
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
